--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 group = 'ru.clevertec'
+archivesBaseName = 'reciept-printer'
 version = '1.0.0'
 
 repositories {
@@ -22,10 +23,22 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.assertj:assertj-core:3.24.2'
-    testImplementation 'org.mockito:mockito-core:5.1.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+}
+
+jar {
+    doLast {
+        copy {
+            from file("build//libs/${archivesBaseName}-${version}.jar")
+            into 'outputJar'
+        }
+    }
+}
+
+clean {
+    doLast {
+        file("outputJar/${archivesBaseName}-${version}.jar").delete()
+        file('outputJar/').delete()
+    }
 }
 
 tasks.named('test') {
